--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Algebra_Numpy.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Algebra_Numpy.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,13 +140,13 @@
     "\n",
     "# Producto matricial\n",
     "\n",
-    "producto = cantidades_np.dot(precios_np)\n",
+    "producto = cantidades_np.dot(precios_np)  #podría tb haber usado np.matmul(cantidades_np, precios_np)\n",
     "print(producto)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,6 +173,29 @@
     "        print(\"Mejor que compres en Manolo Bakes\")\n",
     "    elif manolo > starbucks:\n",
     "        print(\"Mejor que compres en Starbucks\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A Rafa le conviene comprar en Starbucks\n",
+      "A Nacho le conviene comprar en Manolo Bakes\n",
+      "A Clara le conviene comprar en Manolo Bakes\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [\"Rafa\", \"Nacho\", \"Clara\"]\n",
+    "lista_establecimientos = [\"Manolo Bakes\", \"Starbucks\"]\n",
+    "for persona in range(producto.shape[0]):\n",
+    "    indice_precio_minimo = np.argmin(producto[persona])\n",
+    "    print(f\"A {lista[persona]} le conviene comprar en {lista_establecimientos[indice_precio_minimo]}\")"
    ]
   },
   {
@@ -239,22 +262,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Toy Story', 'Jumanji', 'Mortal Kombat', 'Pocahontas']\n"
+      "['Toy Story', 'Jumanji', 'Mortal Kombat', 'Pocahontas']\n",
+      "{'Toy Story': array([0, 1, 1, 1, 0]), 'Jumanji': array([0, 1, 0, 0, 0]), 'Mortal Kombat': array([1, 1, 0, 0, 0]), 'Pocahontas': array([0, 0, 1, 0, 1])}\n"
      ]
     }
    ],
    "source": [
     "#[Acción,  Aventura , Animación, Comedia, Romance] Le voy a asignar el valor 1 si está el género en la peli y 0 si no está. Así se puede crear una matriz donde cada peli tiene 5 elementos\n",
     "\n",
-    "peliculas = [\"Toy Story\", \"Jumanji\", \"Mortal Kombat\", \"Pocahontas\"]\n",
-    "print(peliculas)\n",
+    "peliculas_nombres = [\"Toy Story\", \"Jumanji\", \"Mortal Kombat\", \"Pocahontas\"]\n",
+    "print(peliculas_nombres)\n",
     "#Toy_Story = [Aventura, Animación, Comedia]\n",
     "Toy_Story = np.array([0,1,1,1,0])\n",
     "#Jumanji = [Aventura]\n",
@@ -269,7 +300,8 @@
     "    \"Jumanji\": Jumanji,\n",
     "    \"Mortal Kombat\": Mortal_Kombat,\n",
     "    \"Pocahontas\": Pocahontas\n",
-    "}\n"
+    "}\n",
+    "print(diccionario)"
    ]
   },
   {
@@ -350,11 +382,11 @@
     "\n",
     "print(matriz_peliculas.ndim)\n",
     "\n",
-    "#Shape = Formato (filas, columnas)\n",
+    "#Shape = Formato (filas, columnas) #En este caso filas x columnas (4x5)\n",
     "\n",
     "print(matriz_peliculas.shape) \n",
     "\n",
-    "#Tamaño #En este caso filas x columnas (4x5)\n",
+    "#Tamaño = número de elementos dentro de la matriz\n",
     "\n",
     "print(matriz_peliculas.size)\n",
     "\n",
@@ -373,7 +405,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toy Story\n",
+      "Toy Story\n",
+      "Jumanji\n",
+      "Mortal Kombat\n",
+      "Pocahontas\n",
+      "Wall_E\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 4 is out of bounds for axis 0 with size 4",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(movieB)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m movieA \u001b[38;5;241m!=\u001b[39m movieB:\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;66;03m#Calcular coseno entre movieA y movieB\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m     vec_b \u001b[38;5;241m=\u001b[39m \u001b[43mmatriz_peliculas\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     15\u001b[0m     dot_product \u001b[38;5;241m=\u001b[39m vec_a\u001b[38;5;241m.\u001b[39mdot(vec_b)\n\u001b[0;32m     16\u001b[0m     norm_a \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(vec_a)\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 4 is out of bounds for axis 0 with size 4"
+     ]
+    }
+   ],
+   "source": [
+    "for i,movieA in enumerate(diccionario.keys()):\n",
+    "    print(movieA)\n",
+    "    vec_a = matriz_peliculas[i]\n",
+    "\n",
+    "    #cosenoMax para calcular la película más parecida\n",
+    "    #recomendación temporal para almacenar su nombre\n",
+    "    cosenoMax = -1\n",
+    "    recomendacionTemporal = \"\"\n",
+    "\n",
+    "    for j,movieB in enumerate(diccionario.keys()):\n",
+    "        print(movieB)\n",
+    "        if movieA != movieB:\n",
+    "            #Calcular coseno entre movieA y movieB\n",
+    "            vec_b = matriz_peliculas[j]\n",
+    "            dot_product = vec_a.dot(vec_b)\n",
+    "            norm_a = np.linalg.norm(vec_a)\n",
+    "            norm_b = np.linalg.norm(vec_b)\n",
+    "            coseno = dot_product / (norm_a * norm_b)\n",
+    "\n",
+    "            #Y ahora calcular si movieB da el mayor coseno de todos\n",
+    "            if coseno > cosenoMax:\n",
+    "                recomendacionTemporal = movieB\n",
+    "                cosenoMax = coseno\n",
+    "\n",
+    "    print(f\"Si te ha gustado {movieA}, te recomendamos {movieB}, con un grado de confianza de {cosenoMax:.02f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -416,6 +505,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -448,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -459,13 +555,14 @@
       " [0 1 0 0 0]\n",
       " [1 1 0 0 0]\n",
       " [0 0 1 0 1]\n",
-      " [0 1 1 1 0]]\n"
+      " [0 1 1 1 1]]\n"
      ]
     }
    ],
    "source": [
-    "Wall_E = np.array([0,1,1,1,0])\n",
-    "peliculas = peliculas.append(\"Wall_E\")\n",
+    "Wall_E = np.array([0,1,1,1,1])\n",
+    "\n",
+    "diccionario[\"Wall_E\"] = Wall_E\n",
     "#Para añadir un nuevo vector (pelicula) a la matriz ya existente:\n",
     "\n",
     "matriz_nueva = np.vstack([matriz_peliculas,Wall_E])\n",
@@ -474,7 +571,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +588,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, pelicula1 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43menumerate\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpeliculas\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m      2\u001b[0m     vector1 \u001b[38;5;241m=\u001b[39m matriz_nueva[i]\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j, pelicula2 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(peliculas):\n",
+      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, pelicula1 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43menumerate\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpeliculas\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m      2\u001b[0m     vector1 \u001b[38;5;241m=\u001b[39m matriz_nueva[i]\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j, pelicula2 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(peliculas):\n",
       "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
      ]
     }
@@ -503,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
