--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/11_Ejercicios_Manipulaciones.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/11_Ejercicios_Manipulaciones.ipynb
@@ -571,21 +571,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 4]\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m vector \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      2\u001b[0m no_cero \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mwhere(vector \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(vector[no_cero])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
    "source": [
     "vector = np.array([1,2,0,0,4,0])\n",
     "no_cero = np.where(vector != 0)\n",
-    "print(vector[no_cero])"
+    "print(vector[no_cero])\n",
+    "\n",
+    "vector_11 = vector[vector != 0]"
    ]
   },
   {
