--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/12_Ejercicios_Agregaciones_y_otras_funciones.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/12_Ejercicios_Agregaciones_y_otras_funciones.ipynb
@@ -69,10 +69,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.5468459  0.44925468 0.80998402 0.91386637 0.86385132 0.1056633\n",
+      "  0.89754995 0.88688837 0.99890422 0.7475352 ]\n",
+      " [0.46210563 0.60182771 0.46435473 0.02812463 0.19884409 0.41038481\n",
+      "  0.13404775 0.05540602 0.56632505 0.79964026]\n",
+      " [0.84054011 0.20951586 0.83838935 0.72184456 0.76734933 0.43165284\n",
+      "  0.39141447 0.7015203  0.28674734 0.32644824]\n",
+      " [0.06800289 0.37435896 0.41713842 0.21584807 0.00415833 0.78265668\n",
+      "  0.210498   0.70175595 0.4227863  0.22114601]\n",
+      " [0.99036983 0.32378777 0.77556264 0.26228099 0.03889225 0.10440036\n",
+      "  0.84630026 0.18700563 0.09712802 0.79370357]\n",
+      " [0.86228153 0.41005184 0.37311078 0.54082778 0.31210364 0.89553259\n",
+      "  0.37404043 0.17593682 0.20535635 0.61333664]\n",
+      " [0.02000148 0.50547977 0.74111594 0.43145004 0.79483849 0.5095131\n",
+      "  0.54070735 0.11645191 0.66131416 0.98563796]\n",
+      " [0.95220125 0.23611039 0.2448966  0.48150757 0.42703985 0.17471979\n",
+      "  0.86952232 0.20299412 0.38954969 0.71998823]\n",
+      " [0.42154129 0.45046421 0.76939682 0.40145344 0.18997435 0.53273901\n",
+      "  0.92157129 0.33986478 0.33648997 0.55096503]\n",
+      " [0.08347592 0.3754282  0.42875086 0.00884559 0.59869876 0.99397258\n",
+      "  0.50581159 0.68936123 0.5690522  0.66844644]]\n",
+      "0.9989042162965047\n",
+      "0.004158327526416539\n",
+      "[[0.96043097 0.44369434]\n",
+      " [0.32776557 0.16285736]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz = np.random.rand(10,10)\n",
+    "\n",
+    "valor_minimo = np.min(matriz)\n",
+    "valor_maximo = np.max(matriz)\n",
+    "\n",
+    "print(matriz)\n",
+    "print(valor_maximo)\n",
+    "print(valor_minimo)\n",
+    "\n",
+    "matriz_2x2 = np.random.rand(2, 2)\n",
+    "\n",
+    "# Imprimir la matriz\n",
+    "print(matriz_2x2)"
+   ]
   },
   {
    "attachments": {
@@ -97,10 +151,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.27922198 0.56624799 0.98154054 0.51952873 0.02734761 0.40198516\n",
+      " 0.90295411 0.28191206 0.31142658 0.67090898 0.12423066 0.12208062\n",
+      " 0.34155171 0.75557411 0.84620455 0.32373978 0.34652891 0.2329235\n",
+      " 0.24452246 0.15257901 0.16997844 0.82113955 0.99578641 0.83321321\n",
+      " 0.41756506 0.30917505 0.93565494 0.98096186 0.04236159 0.91266279]\n",
+      "0.49505026438619665\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crear un vector aleatorio de tamaño 30\n",
+    "vector_aleatorio = np.random.rand(30)\n",
+    "\n",
+    "# Calcular la media del vector\n",
+    "media = np.mean(vector_aleatorio)\n",
+    "\n",
+    "print(vector_aleatorio)\n",
+    "print(media)"
+   ]
   },
   {
    "attachments": {
@@ -135,10 +211,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([[0, 1],\n",
+      "       [1, 0]]), (8, 8))\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz_8x8 = np.array([[0, 1], [1, 0]]), (8,8)\n",
+    "print(matriz_8x8)"
+   ]
   },
   {
    "attachments": {
@@ -162,9 +250,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz_8x8 = np.tile(np.array([[0, 1], [1, 0]]), (4, 4))\n",
+    "\n",
+    "# Imprimir la matriz por pantalla\n",
+    "print(matriz_8x8)"
+   ]
   },
   {
    "attachments": {
@@ -189,10 +299,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.75315487 0.61265891 0.34462579 0.04756323 0.91615891]\n",
+      " [0.45265361 0.79416625 0.46730599 0.24000099 0.13568629]\n",
+      " [0.67977197 0.22377071 0.74019213 0.03675658 0.24102892]\n",
+      " [0.87140121 0.23588696 0.58265943 0.49069808 0.92839295]\n",
+      " [0.75676498 0.31188055 0.99783948 0.81988306 0.69067939]]\n",
+      "[[ 0.75815035  0.27019271 -0.66071521 -1.6924455   1.32428094]\n",
+      " [-0.28552294  0.90058728 -0.23463363 -1.02408843 -1.38638463]\n",
+      " [ 0.5032836  -1.08045794  0.71312934 -1.72997817 -1.02051832]\n",
+      " [ 1.16883261 -1.03837688  0.1660013  -0.15339039  1.36677109]\n",
+      " [ 0.77068863 -0.77444297  1.60796635  0.98990455  0.54116625]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz_5x5 = np.random.rand(5,5)\n",
+    "print(matriz_5x5)\n",
+    "\n",
+    "media = np.mean(matriz_5x5)\n",
+    "ds = np.std(matriz_5x5)\n",
+    "\n",
+    "normalizar = (matriz_5x5 - media) / ds\n",
+    "print(normalizar)"
+   ]
   },
   {
    "attachments": {
@@ -217,10 +353,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([0, 1, 4], dtype=int64),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "vector = np.array([1,2,0,0,4,0])\n",
+    "vector_x = np.where(vector != 0)\n",
+    "print(vector_x)"
+   ]
   }
  ],
  "metadata": {
@@ -239,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
