--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Numpy__II.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Numpy__II.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "       [ 0,  4]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "alumnos_aidone_nuevo = np.concatenate((alumnos_aidone, [Teresa], [Udo]), axis=0) #Claro, concatenate sí con el axis = 0 porque añades TEresa y Udo con 1 dimensión cada uno\n",
+    "alumnos_aidone_nuevo = np.concatenate((alumnos_aidone, [Teresa], [Udo]), axis=0) #Claro, concatenate sí con el axis = 0 porque añades TEresa y Udo con 1 dimensión cada uno como filas\n",
     "print(alumnos_aidone_nuevo)"
    ]
   },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[43], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m alumnos_aidone_matriz \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(alumnos_aidone_nuevo)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Calcular distancias para Teresa\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m vector_distancias_teresa \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(\u001b[43malumnos_aidone_matriz\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mvector_teresa\u001b[49m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;66;03m#Con axis = 1 se realiza la operacion a lo largo de las columnas para comparar los puntos de cada compañero\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Calcular distancias para Udo\u001b[39;00m\n\u001b[0;32m      9\u001b[0m vector_distancias_udo \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(alumnos_aidone_matriz \u001b[38;5;241m-\u001b[39m vector_udo, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[9], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m alumnos_aidone_matriz \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(alumnos_aidone_nuevo)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Calcular distancias para Teresa\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m vector_distancias_teresa \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(\u001b[43malumnos_aidone_matriz\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mvector_teresa\u001b[49m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;66;03m#Con axis = 1 se realiza la operacion a lo largo de las columnas para comparar los puntos de cada compañero\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Calcular distancias para Udo\u001b[39;00m\n\u001b[0;32m      9\u001b[0m vector_distancias_udo \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(alumnos_aidone_matriz \u001b[38;5;241m-\u001b[39m vector_udo, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
       "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (12,2) (3,) "
      ]
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -549,24 +549,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tentativa: 9, 5, O, [(9, 5), (9, 4), (9, 3), (9, 2)]\n",
+      "Tentativa: 8, 5, S, [(8, 5), (9, 5)]\n",
+      "Tentativa: 2, 4, N, [(2, 4), (1, 4), (0, 4)]\n",
+      "Tentativa: 4, 2, S, [(4, 2), (5, 2), (6, 2), (7, 2)]\n",
       "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ' ' ']]\n"
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
      ]
     }
    ],
