--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Pandas_I.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_04/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Pandas_I.ipynb
@@ -44,6 +44,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -51,8 +61,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +79,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "serie_lanzamiento = pd.Series(lanzamiento, index=titulos, name = \"Lanzamiento\")\n",
+    "serie_recaudaciones = pd.Series(recaudaciones, index=titulos, name = \"Recaudaciones\")\n",
+    "serie_espectadores = pd.Series(espectadores, index=titulos, name = \"Espectadores\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -71,10 +97,102 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Up                      735\n",
+       "Monsters University     744\n",
+       "Caco                    807\n",
+       "Inside Out              857\n",
+       "Buscando a Dory        1029\n",
+       "Toy Story 3            1067\n",
+       "Toy Story 4            1073\n",
+       "Los Incríbles 2        1242\n",
+       "Name: Recaudaciones, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_recaudaciones.sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los Incríbles 2        1242\n",
+      "Toy Story 4            1073\n",
+      "Toy Story 3            1067\n",
+      "Buscando a Dory        1029\n",
+      "Inside Out              857\n",
+      "Caco                    807\n",
+      "Monsters University     744\n",
+      "Up                      735\n",
+      "Name: Recaudaciones, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "recaudaciones_mayor_a_menor = serie_recaudaciones.sort_values(ascending = False)\n",
+    "print(recaudaciones_mayor_a_menor)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "3. Utilizando la serie de recaudaciones obtenida en el apartado anterior, recorrela de forma que muestres para cada película su recaudación y ya de paso su año de lanzamiento y el número de espectadores. (Ojo el que corresponda de forma correcta, no te vale el índice de un enumerate por ejemplo, pero no lo necesitas, recuerda que las Series vienen con su índice explícito incorporado y todas las que hayas creado tienen el mismo). Muestra también el precio medio de la entrada que tuvo cada película."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La película Los Incríbles 2 ha recaudado 1242 millones de dolares. Se lanzó en el año 2018 y fue vista por 93.42 espectadores\n",
+      "El precio medio de las entradas de la película Los Incríbles 2 fue 13\n",
+      "La película Toy Story 4 ha recaudado 1073 millones de dolares. Se lanzó en el año 2019 y fue vista por 74.91 espectadores\n",
+      "El precio medio de las entradas de la película Toy Story 4 fue 14\n",
+      "La película Toy Story 3 ha recaudado 1067 millones de dolares. Se lanzó en el año 2010 y fue vista por 81.35 espectadores\n",
+      "El precio medio de las entradas de la película Toy Story 3 fue 13\n",
+      "La película Buscando a Dory ha recaudado 1029 millones de dolares. Se lanzó en el año 2016 y fue vista por 76.72 espectadores\n",
+      "El precio medio de las entradas de la película Buscando a Dory fue 13\n",
+      "La película Inside Out ha recaudado 857 millones de dolares. Se lanzó en el año 2015 y fue vista por 68.27 espectadores\n",
+      "El precio medio de las entradas de la película Inside Out fue 13\n",
+      "La película Caco ha recaudado 807 millones de dolares. Se lanzó en el año 2017 y fue vista por 62.75 espectadores\n",
+      "El precio medio de las entradas de la película Caco fue 13\n",
+      "La película Monsters University ha recaudado 744 millones de dolares. Se lanzó en el año 2013 y fue vista por 54.74 espectadores\n",
+      "El precio medio de las entradas de la película Monsters University fue 14\n",
+      "La película Up ha recaudado 735 millones de dolares. Se lanzó en el año 2009 y fue vista por 54.34 espectadores\n",
+      "El precio medio de las entradas de la película Up fue 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "for pelicula, recaudacion in recaudaciones_mayor_a_menor.items(): #items() para iterar en clave:valor\n",
+    "    lanzamiento_pelicula = serie_lanzamiento.loc[pelicula] #localiza de forma explícita\n",
+    "    espectadores_pelicula = serie_espectadores.loc[pelicula]\n",
+    "    precio_mean_entrada = recaudacion / espectadores_pelicula\n",
+    "\n",
+    "    print(f\"La película {pelicula} ha recaudado {recaudacion} millones de dolares. Se lanzó en el año {lanzamiento_pelicula} y fue vista por {espectadores_pelicula} espectadores\")\n",
+    "    print(f\"El precio medio de las entradas de la película {pelicula} fue {round(precio_mean_entrada)}\")\n"
    ]
   },
   {
@@ -88,6 +206,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Up\n",
+      "La pelicula de menor recaudacion es Up que se lanzó en el 2006\n",
+      "Ninguna película ha tenido ese número de espectadores.\n",
+      "Gonzalo tenía 21 cuando fue a ver el estreno de Toy Story 4\n",
+      "Gonzalo tenía 24 cuando fue a ver el estreno de Los Incríbles 2\n",
+      "Gonzalo tenía 22 cuando fue a ver el estreno de Buscando a Dory\n",
+      "Gonzalo tenía 16 cuando fue a ver el estreno de Toy Story 3\n",
+      "Gonzalo tenía 23 cuando fue a ver el estreno de Caco\n",
+      "Gonzalo tenía 21 cuando fue a ver el estreno de Inside Out\n",
+      "Gonzalo tenía 19 cuando fue a ver el estreno de Monsters University\n",
+      "Gonzalo tenía 12 cuando fue a ver el estreno de Up\n"
+     ]
+    }
+   ],
+   "source": [
+    "#AÑO DE LA PELI DE MENOR RECAUDACION\n",
+    "\n",
+    "pelicula_menos_recaudacion = serie_recaudaciones.idxmin()\n",
+    "print(pelicula_menos_recaudacion)\n",
+    "\n",
+    "agno_menor_recaudacion = serie_lanzamiento.loc[pelicula_menos_recaudacion]\n",
+    "print(f\"La pelicula de menor recaudacion es {pelicula_menos_recaudacion} que se lanzó en el {agno_menor_recaudacion}\")\n",
+    "\n",
+    "# PELI CON MÁS DE 1000 MILL Y MENOS 75 MILL ESPECTADORES\n",
+    "pelicula_concreta = serie_espectadores[(serie_espectadores > 1000) & (serie_espectadores < 75)]\n",
+    "if not pelicula_concreta.empty: #lista vacía porque no hay película que cumpla con criterio propuesto\n",
+    "    pelicula_concreta_nombre = pelicula_concreta.index[0]\n",
+    "    print(f\"La película con más de 1000 millones de recaudación y menos de 75 millones de espectadores es '{pelicula_concreta_nombre}'.\")\n",
+    "else:\n",
+    "    print(\"Ninguna película ha tenido ese número de espectadores.\")\n",
+    "\n",
+    "#GONZALO 30 AÑOS. EDAD A LA QUE FUE A CADA PELI EN EL ESTRENO\n",
+    "edad_actual = 30\n",
+    "agno_actual = 2024\n",
+    "\n",
+    "for pelicula, agno in serie_lanzamiento.items():\n",
+    "    agnos_transcurridos = agno_actual - agno\n",
+    "    edad_cine_gonzalo = edad_actual - agnos_transcurridos\n",
+    "\n",
+    "    print(f\"Gonzalo tenía {edad_cine_gonzalo} cuando fue a ver el estreno de {pelicula}\")\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,6 +265,54 @@
     "* Toy Story 4 es de 2019  y Up de 2009\n",
     "* La recaudación de Monsters University fue de 754 millones.\n",
     "* Hay 2 nombres que han sufrido el efecto del conocido \"error Jaime\", corrígelo en todas las series (recuerda que los indices son inmutables, tendrás que hacer algo de código)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "serie_lanzamiento[\"Toy Story 4\"] = 2019\n",
+    "serie_lanzamiento[\"Up\"] = 2009\n",
+    "serie_recaudaciones[\"Monsters University\"] = 754\n",
+    "\n",
+    "#Caco = Coco y Incríbles = Increíbles \n",
+    "\n",
+    "correccion = {\"Caco\": \"Coco\", \"Los Incríbles 2\": \"Los Increíbles 2\"}\n",
+    "\n",
+    "# Aplicar la biblioteca de correcciones a todos los índices de las series\n",
+    "serie_recaudaciones = serie_recaudaciones.rename(index=correccion)\n",
+    "serie_lanzamiento = serie_lanzamiento.rename(index=correccion)\n",
+    "serie_espectadores = serie_espectadores.rename(index=correccion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Toy Story 4            1073\n",
+       "Los Increíbles 2       1242\n",
+       "Buscando a Dory        1029\n",
+       "Toy Story 3            1067\n",
+       "Coco                    807\n",
+       "Inside Out              857\n",
+       "Monsters University     754\n",
+       "Up                      735\n",
+       "Name: Recaudaciones, dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_recaudaciones"
    ]
   },
   {
@@ -112,11 +330,129 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Recaudación</th>\n",
+       "      <th>Año de Lanzamiento</th>\n",
+       "      <th>Número de Espectadores</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Toy Story 4</th>\n",
+       "      <td>1073</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>74.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Los Increíbles 2</th>\n",
+       "      <td>1242</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>93.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Buscando a Dory</th>\n",
+       "      <td>1029</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>76.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Toy Story 3</th>\n",
+       "      <td>1067</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>81.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Coco</th>\n",
+       "      <td>807</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>62.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inside Out</th>\n",
+       "      <td>857</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>68.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Monsters University</th>\n",
+       "      <td>754</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>54.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Up</th>\n",
+       "      <td>735</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>54.34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Recaudación  Año de Lanzamiento  Número de Espectadores\n",
+       "Toy Story 4                 1073                2019                   74.91\n",
+       "Los Increíbles 2            1242                2018                   93.42\n",
+       "Buscando a Dory             1029                2016                   76.72\n",
+       "Toy Story 3                 1067                2010                   81.35\n",
+       "Coco                         807                2017                   62.75\n",
+       "Inside Out                   857                2015                   68.27\n",
+       "Monsters University          754                2013                   54.74\n",
+       "Up                           735                2009                   54.34"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\"Recaudación\": serie_recaudaciones,\n",
+    "    \"Año de Lanzamiento\": serie_lanzamiento,\n",
+    "    \"Número de Espectadores\": serie_espectadores}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "2. Muestra los datos de las películas que tengan más de 10 años."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -177,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
