--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Ejercicios_Workout/10_Ejercicios_Matrices.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Ejercicios_Workout/10_Ejercicios_Matrices.ipynb
@@ -72,6 +72,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -267,10 +276,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[93 59]\n",
+      " [66 48]\n",
+      " [47 45]]\n",
+      "[[-10  10   6]\n",
+      " [ -6   8   6]\n",
+      " [-10  10   6]\n",
+      " [ -9  12   9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Sólo podré hacer AxB y CxB\n",
+    "\n",
+    "A = np.array([[9,5,8,5],\n",
+    "     [6,6,3,6],\n",
+    "     [0,8,1,9]])\n",
+    "\n",
+    "B = np.array([[4,2],\n",
+    "     [2,2],\n",
+    "     [4,2],\n",
+    "     [3,3]])\n",
+    "\n",
+    "C = np.array([[-2,1,0],\n",
+    "     [-1,3,3]])\n",
+    "\n",
+    "\n",
+    "AxB = A.dot(B)\n",
+    "\n",
+    "BxC = B.dot(C)\n",
+    "\n",
+    "print(AxB)\n",
+    "print(BxC)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -298,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
