--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Ejercicios_Workout/11_Ejercicios_Hello_Numpy.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Ejercicios_Workout/11_Ejercicios_Hello_Numpy.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "-0.31622776601683794"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def multiplicacion (array1, array2):\n",
+    "    resultado = array1.dot(array2)\n",
+    "    for filas, columnas in array:\n"
+   ]
   },
   {
    "attachments": {
@@ -297,11 +301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[93 59]\n",
+      " [66 48]\n",
+      " [47 45]]\n",
+      "[[-10  10   6]\n",
+      " [ -6   8   6]\n",
+      " [-10  10   6]\n",
+      " [ -9  12   9]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Sólo podré hacer AxC y AxB\n",
+    "#Sólo podré hacer AxB y CxB\n",
     "\n",
     "A = np.array([[9,5,8,5],\n",
     "     [6,6,3,6],\n",
@@ -316,6 +334,12 @@
     "     [-1,3,3]])\n",
     "\n",
     "\n",
+    "AxB = A.dot(B)\n",
+    "\n",
+    "BxC = B.dot(C)\n",
+    "\n",
+    "print(AxB)\n",
+    "print(BxC)\n",
     "\n"
    ]
   },
